chore(repo): initial clean up of create-t3-turbo to match project requirements

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
   "recommendations": [
+    "vivaxy.vscode-conventional-commits",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "bradlc.vscode-tailwindcss",
-    "Prisma.prisma"
+    "bradlc.vscode-tailwindcss"
   ]
 }
