--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,6 @@
 packages:
-  - apps/expo
-  - apps/nextjs
-  - packages/api
+  - apps/superadmin-web
+  - packages/superadmin-api
   - packages/auth
   - packages/db
   - packages/config/*
