--- a/packages/superadmin-api/package.json
+++ b/packages/superadmin-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@craftyfoodz/auth",
+  "name": "@craftyfoodz/superadmin-api",
   "version": "0.1.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -11,12 +11,12 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@craftyfoodz/auth": "^0.1.0",
     "@craftyfoodz/db": "^0.1.0",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "next": "^13.3.0",
-    "next-auth": "^4.22.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@trpc/client": "^10.20.0",
+    "@trpc/server": "^10.20.0",
+    "superjson": "1.9.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@craftyfoodz/eslint-config": "^0.1.0",
