feat(superadmin): add shadcn's ui package

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DATABASE_URL="mysql://username:password@host:port/database"
 
 # SuperAdmin-Web Options (Super Admin Panel)
 SAP_SECRET="supersecret"
+SAP_PUBLIC_URL="http://localhost:3001"
 
 # Restaurant-Web Options (Restaurant Employee Portal)
 REP_SECRET="supersecret"
