--- a/turbo.json
+++ b/turbo.json
@@ -34,11 +34,10 @@
   "globalEnv": [
     "CI",
     "DATABASE_URL",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
     "NODE_ENV",
     "SKIP_ENV_VALIDATION",
     "VERCEL",
-    "VERCEL_URL"
+    "VERCEL_URL",
+    "SAP_PUBLIC_URL"
   ]
 }
