--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@craftyfoodz/db": "^0.1.0",
     "@craftyfoodz/tailwind-config": "^0.1.0",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
