--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -27,7 +27,7 @@
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
-    "jsonwebtoken": "^9.0.0",
+    "jose": "^4.14.1",
     "lucide-react": "^0.166.0",
     "next": "^13.3.0",
     "react": "18.2.0",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@craftyfoodz/eslint-config": "^0.1.0",
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
