--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@craftyfoodz/db": "^0.1.0",
     "@craftyfoodz/tailwind-config": "^0.1.0",
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -32,6 +33,7 @@
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
