--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
