feat(superadmin): add emailing for access code

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DATABASE_URL="mysql://username:password@host:port/database"
 # SuperAdmin-Web Options (Super Admin Panel)
 SAP_SECRET="supersecret"
 SAP_PUBLIC_URL="http://localhost:3001"
+SAP_SENDGRID_API_KEY="SG.pH_____________s" # SendGrid API Key
+SAP_SENDGRID_FROM_EMAIL="noreply@whatever.com" # Approved from email from SendGrid
+SAP_SENDGRID_LOGIN_TEMP_ID="d-d648dbfa7f284a7981c1aa2c9675bda8" # Login email template from SendGrid
 
 # Restaurant-Web Options (Restaurant Employee Portal)
 REP_SECRET="supersecret"
