--- a/turbo.json
+++ b/turbo.json
@@ -39,6 +39,9 @@
     "VERCEL",
     "VERCEL_URL",
     "SAP_PUBLIC_URL",
-    "SAP_SECRET"
+    "SAP_SECRET",
+    "SAP_SENDGRID_API_KEY",
+    "SAP_SENDGRID_FROM_EMAIL",
+    "SAP_SENDGRID_LOGIN_TEMP_ID"
   ]
 }
