--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@craftyfoodz/db": "^0.1.0",
     "@craftyfoodz/tailwind-config": "^0.1.0",
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
@@ -26,17 +29,22 @@
     "@trpc/server": "^10.20.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
+    "jose": "^4.14.1",
     "lucide-react": "^0.166.0",
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "superjson": "1.9.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
+    "trpc-panel": "^1.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@craftyfoodz/eslint-config": "^0.1.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
