--- a/turbo.json
+++ b/turbo.json
@@ -38,6 +38,10 @@
     "SKIP_ENV_VALIDATION",
     "VERCEL",
     "VERCEL_URL",
-    "SAP_PUBLIC_URL"
+    "SAP_PUBLIC_URL",
+    "SAP_SECRET",
+    "SAP_SENDGRID_API_KEY",
+    "SAP_SENDGRID_FROM_EMAIL",
+    "SAP_SENDGRID_LOGIN_TEMP_ID"
   ]
 }
