--- a/apps/superadmin-web/package.json
+++ b/apps/superadmin-web/package.json
@@ -16,11 +16,13 @@
     "@craftyfoodz/db": "^0.1.0",
     "@craftyfoodz/tailwind-config": "^0.1.0",
     "@hookform/resolvers": "^3.1.0",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.2",
