--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "turbo build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
-    "db:seed": "turbo db:seed",
+    "db:seed:admin": "turbo db:seed:admin",
     "db:push": "turbo db:push",
     "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
